--- a/companies/templates/companies/employer_detail.html
+++ b/companies/templates/companies/employer_detail.html
@@ -1,2 +1,130 @@
-<h1>job detail</h1>
-{{employer}}
+{% extends 'base.html' %}
+{% load static %}
+{% load bootstrap4 %}
+{% block content %}
+<!-- bradcam_area  -->
+<div class="bradcam_area bradcam_bg_1">
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-12">
+                <div class="bradcam_text">
+                    <h3>{{employer}}</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--/ bradcam_area  -->
+
+<div class="job_details_area">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8">
+                <div class="job_details_header">
+                    <div class="single_jobs white-bg d-flex justify-content-between">
+                        <div class="jobs_left d-flex align-items-center">
+                            <div class="thumb">
+                                <img src="img/svg_icon/1.svg" alt="">
+                            </div>
+                            <div class="jobs_conetent">
+                                <a href="#">
+                                    <h4>{{employer}}</h4>
+                                </a>
+                                <div class="links_locat d-flex align-items-center">
+                                    <div class="location">
+                                        <p> <i class="fa fa-map-marker"></i> {{employer.location}}</p>
+                                    </div>
+                                    <div class="location">
+                                        <p> <i class="fa fa-clock-o"></i> {{employer.industry}}</p>
+                                    </div>
+                                    <div>
+                                        <button type="submit" class="btn btn-primary"><a
+                                                href="{% url 'companies:Employer_update' employer.slug %}">update</a></button>
+                                        <button type="submit" class="btn btn-danger"><a
+                                                href="{% url 'companies:Employer_delete' employer.slug %}">remove</a></button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="descript_wrap white-bg">
+                    <div class="single_wrap">
+                        <h4>Company Profile</h4>
+                        <p>{{employer.Profile}}</p>
+                    </div>
+ 
+                </div>
+
+            </div>
+            <div class="col-lg-4">
+                <div class="job_sumary">
+                    <div class="summery_header">
+                        <h3>Company Summery</h3>
+                    </div>
+                    <div class="job_content">
+                        <ul>
+                            <a href=""></a>
+                            <li>Founded At: <span>{{employer.founded}}</span></li>
+                            <li>Company Size: <span>{{employer.size}} Position</span></li>
+                            <li>website: <a href="{{employer.website}}" target="_blank">{{employer.website}}</a></li>
+                            <!-- <li>linkedin: <a>{{employer.linkedin}}</a></li> -->
+                        </ul>
+                    </div>
+                </div>
+                <div class="share_wrap d-flex">
+                    <span>Share at:</span>
+                    <ul>
+                        <li><a href="https://www.facebook.com" target="_blank"> <i class="fa fa-facebook"></i></a> </li>
+                        <li><a href="https://www.google-plus.com" target="_blank"> <i class="fa fa-google-plus"></i></a>
+                        </li>
+                        <li><a href="{{employer.linkedin}}" target="_blank"> <i class="fa fa-linkedin"></i></a> </li>
+                    </ul>
+
+                </div>
+
+
+            </div>
+        </div>
+        <!-- featured_candidates_area_start  -->
+        <div class="job_lists m-0">
+            <div class="row">
+                {% for job in jobs %}
+                <div class="col-lg-12 col-md-12">
+                    <div class="single_jobs white-bg d-flex justify-content-between">
+                        <div class="jobs_left d-flex align-items-center">
+
+                            <div class="jobs_conetent">
+                                <a href="{% url 'board:job_detail' job.slug %}">
+                                    <h4>{{job}}</h4>
+                                </a>
+                                <div class="links_locat d-flex align-items-center">
+                                    <div class="location">
+                                        <p> <i class="fa fa-map-marker"></i> {{job.employer.location}}</p>
+                                    </div>
+                                    <div class="location">
+                                        <p> <i class="fa fa-clock-o"></i> {{job.job_type}}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="jobs_right">
+                            <div class="apply_now">
+                                <a href="{% url 'board:job_detail' job.slug %}" class="boxed-btn3">Apply Now</a>
+
+                            </div>
+                            <div class="date">
+                                <p>Date line: {{job.published_at|date:'d-N-Y'}}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+        <!-- featured_candidates_area_end  -->
+    </div>
+</div>
+
+{% endblock content %}
