--- a/companies/templates/companies/employer_list.html
+++ b/companies/templates/companies/employer_list.html
@@ -1,4 +1,132 @@
-<h1>job list</h1>
-{% for em in employers %}
-{{em}}
-{% endfor %}
+{% extends 'base.html' %}
+{% load static %}
+{% load bootstrap4 %}
+{% block content %}
+
+<!-- bradcam_area  -->
+<div class="bradcam_area bradcam_bg_1">
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-12">
+                <div class="bradcam_text">
+                    <h3>{{count}}</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--/ bradcam_area  -->
+
+<!-- job_listing_area_start  -->
+<div class="job_listing_area plus_padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3">
+                <div class="job_filter white-bg">
+                    <div class="form_inner white-bg">
+                        <h3>Filter</h3>
+                        <form method="GET">
+                            {% bootstrap_form myfilter.form %}
+                            <div class="reset_btn">
+                                <button class="boxed-btn3 w-100" type="submit">Reset</button>
+                            </div>
+                        </form>
+                    </div>
+
+
+                </div>
+            </div>
+            <div class="col-lg-9">
+                <div class="recent_joblist_wrap">
+                    <div class="recent_joblist white-bg ">
+                        <div class="row align-items-center">
+                            <div class="col-md-6">
+                                <h4>Jobs Companies</h4>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="serch_cat d-flex justify-content-end">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="job_lists m-0">
+                    <div class="row">
+                        {% for em in Employers %}
+                        <div class="col-lg-12 col-md-12">
+                            <div class="single_jobs white-bg d-flex justify-content-between">
+                                <div class="jobs_left d-flex align-items-center">
+
+                                    <div class="jobs_conetent">
+                                        <a href="{% url 'companies:Employer_detail' em.slug %}">
+                                            <h4>{{em}}</h4>
+                                        </a>
+                                        <div class="links_locat d-flex align-items-center">
+                                            <div class="location">
+                                                <p> location </p>
+                                                <p> <i class="fa fa-map-marker"></i> {{em.location}}</p>
+                                            </div>
+                                            <div class="location">
+                                                <p> Industry </p>
+                                                <p> <i class="fa fa-clock-o"></i> {{em.industry}}</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="jobs_right">
+                                    <div class="apply_now">
+                                        <a href="{% url 'companies:Employer_detail' em.slug %}"
+                                            class="boxed-btn3">Company Info</a>
+
+                                    </div>
+                                    <div class="date">
+                                        <p> Founded At : {{em.founded|date:'d-N-Y'}}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        {% endfor %}
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div>
+                                <ul>
+                                    {% if Employers.has_other_pages %}
+                                    <ul class="pagination justify-content-center mb-4">
+                                        {% if Employers.has_previous %}
+                                        <li class="page-item"><a class="page-link"
+                                                href="?page={{ Employers.previous_page_number }}">&laquo;</a></li>
+                                        {% else %}
+                                        <li class="disabled page-item"><span class="page-link">&laquo;</span></li>
+                                        {% endif %}
+                                        {% for i in Employers.paginator.page_range %}
+                                        {% if Employers.number == i %}
+                                        <li class="active page-item"><span class="page-link">{{ i }} <span
+                                                    class="sr-only page-item">(current)</span></span></li>
+                                        {% else %}
+                                        <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                                        {% endif %}
+                                        {% endfor %}
+                                        {% if Employers.has_next %}
+                                        <li class="page-item"><a class="page-link"
+                                                href="?page={{ Employers.next_page_number }}">&raquo;</a></li>
+                                        {% else %}
+                                        <li class="disabled page-item"><span class="page-link">&raquo;</span></li>
+                                        {% endif %}
+                                    </ul>
+                                    {% endif %}
+                                </ul>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- job_listing_area_end  -->
+
+{% endblock %}
